--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^9.6.1",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-loader-spinner": "^5.1.0",
     "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
